--- a/Projects.html
+++ b/Projects.html
@@ -143,9 +143,9 @@
                             </label>
                         </div>
                         <div class="container">
-                            <input type="checkbox" id="zoomCheck5">
-                            <label for="zoomCheck5">
-                                <img src="./tasarım2/pikaçu.png" style="width: 100%; padding-left: 1rem;">
+                            <input type="checkbox" id="zoomCheck15">
+                            <label for="zoomCheck15">
+                                <img src="./tasarım2/dinozor.png" style="width: 100%; padding-left: 1rem;">
                             </label>
                         </div>
                     </div>
@@ -211,9 +211,9 @@
                     </div>
                     <div class="card">
                         <div class="container">
-                            <input type="checkbox" id="zoomCheck15">
-                            <label for="zoomCheck15">
-                                <img src="./tasarım2/ev.png" style="width: 100%; padding-left: 1rem;">
+                            <input type="checkbox" id="zoomCheck5">
+                            <label for="zoomCheck5">
+                                <img src="./tasarım2/pikaçu.png" style="width: 100%; padding-left: 1rem;">
                             </label>
                         </div>
                         <div class="container">
