--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                                     <i id="nextBtn"><i class="fas fa-arrow-right"></i></i>
                                     <div class="carousel-slide" id="slider-slide">
                                         <img src="./tasarım2/IceCreamShop.png" id="lastClone" alt="">
-                                        <img src="./tasarım2/ODA.png" alt="">
-                                        <img src="./tasarım2/roomWithStairs.png" alt="">
+                                        <img src="./tasarım2/dinozor.png" alt="">
+                                        <img src="./tasarım2/karetegirl.png" alt="">
                                         <img src="./tasarım2/IceCreamShop.png" alt="">
-                                        <img src="./tasarım2/ODA.png" id="firstClone" alt="">
+                                        <img src="./tasarım2/dinozor.png" id="firstClone" alt="">
                                     </div>
                                 </div>
                             </div>
